basic-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: basic-auth
  labels:
    app: httpbin
    app.kubernetes.io/name: httpbin
spec:
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      terminationGracePeriodSeconds: 30
