basic-auth/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: basic-auth
spec:
  selector:
    istio: ingressgateway # istio-systemに存在する前提
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - basic-auth.example.com
