basic-auth/traffic-management.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
  namespace: basic-auth
spec:
  gateways:
  - gateway
  hosts:
  - '*'
  http:
  - match:
    - port: 443
    name: "https-basic-auth"
    route:
    - destination:
        host: httpbin.basic-auth.svc.cluster.local
        port:
          number: 80
      headers:
        request:
          set:
            x-forwarded-port: "443"
            x-forwarded-proto: https

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin
  namespace: basic-auth
spec:
  host: httpbin.basic-auth.svc.cluster.local
